--- a/code_09.ipynb
+++ b/code_09.ipynb
@@ -88,6 +88,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 파일과 폴더 복사 "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "빈 텍스트 파일 생성"
    ]
   },
@@ -172,12 +179,158 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "폴더 전체 복사"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'backup'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shutil.copytree('.', 'backup')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['그냥.txt', '저냥.txt']"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.listdir('backup')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### 연습\n",
     "\n",
-    "sandbox 폴더와 같은 디렉토리 경로를 갖는 sandbox2 폴더를 만들고, sandbox 디렉토리의 모든 파일을 새로 sandbox2 폴더로 복사한다.\n",
+    "현재 경로를 .../sandbox로 설정하고 다음을 수행한다.\n",
     "\n",
-    "1. sandbox2 폴더에 복사하는 파일들은 파일명 끝에 2를 붙여 새로운 파일명으로 설정한다. 예: 그냥.txt --> 그냥2.txt"
+    "1. sandbox 디렉토리의 모든 파일을 sandbox2 폴더로 복사한다.\n",
+    "1. sandbox 디렉토리의 모든 파일을 sandbox3 폴더로 복사한다. 이 때, 복사하는 파일들은 파일명 끝에 2를 붙여 새로운 파일명으로 설정한다. 예: 그냥.txt --> 그냥2.txt"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "os.makedirs('../sandbox2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'../sandbox2'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shutil.copytree('.', '../sandbox2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['그냥', 'txt']"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.path.basename('그냥.txt').split('.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['그냥2.txt', '저냥2.txt']"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.makedirs('../sandbox3')\n",
+    "for 파일 in os.listdir():\n",
+    "    if not os.path.isfile(파일): continue\n",
+    "    파일명, 확장자 = os.path.basename(파일).split('.')\n",
+    "    파일명 = 파일명 + '2'\n",
+    "    shutil.copy(파일, os.path.join('..', 'sandbox3', '.'.join([파일명, 확장자])))\n",
+    "    \n",
+    "os.listdir('../sandbox3')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
