--- a/web/webscrap.ipynb
+++ b/web/webscrap.ipynb
@@ -20,8 +20,7 @@
    "outputs": [],
    "source": [
     "from bs4 import BeautifulSoup\n",
-    "import webscrap.io\n",
-    "import webscrap.html"
+    "import webscrap"
    ]
   },
   {
