webscrap 모듈 변경 반영

--- a/web/webscrap.ipynb
+++ b/web/webscrap.ipynb
@@ -66,8 +66,7 @@
    },
    "outputs": [],
    "source": [
-    "html = open(웹문서스냅샷파일)\n",
-    "soup = BeautifulSoup(html, 'html.parser')"
+    "soup = webscrap.html.get_soup(웹문서스냅샷파일)"
    ]
   },
   {
@@ -325,7 +324,16 @@
    ],
    "source": [
     "표목록 = soup.select('table.wikitable')\n",
-    "webscrap.html.표추출(표목록)[0]"
+    "webscrap.html.extract_tables(표목록)[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## CSS 선택자 "
    ]
   },
   {
