이메일 패키지 재구성

--- a/office/email.ipynb
+++ b/office/email.ipynb
@@ -19,9 +19,9 @@
    },
    "outputs": [],
    "source": [
-    "sys.path.append(os.path.abspath('../lib/'))\n",
+    "sys.path.append(os.path.abspath('../packages/'))\n",
     "\n",
-    "from bigpy import emailconfig, mail"
+    "from bigpy.mail import EmailClient, EmailConfig"
    ]
   },
   {
@@ -136,33 +136,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "gmail = mail.EmailClient('imap.gmail.com', ssl=True)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "OAuth2로 로그인"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Access Token 정보 가져오기"
+    "Email 클라이언트 설정"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -171,13 +153,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "접근 토큰:  ya29.CjAHA3IQXmue1H-8XyC2Uyqs5_n2TQq_PjC88mAuavR_hRJSpzxKcm_DCVSjvMuv1t4\n",
-      "Config file oauth2.cfg updated.\n"
+      "[b'seongjoo@codebasic.co authenticated (Success)']\n"
      ]
     }
    ],
    "source": [
-    "access_token = emailconfig.get_access_token('oauth2.cfg', 'GMAIL', refresh=True)"
+    "gmail = EmailClient('imap.gmail.com', ssl=True, \n",
+    "                    method={'oauth2': {'configfile': 'oauth2.cfg', 'section': 'GMAIL'}},\n",
+    "                   debug=False)"
    ]
   },
   {
@@ -206,7 +189,7 @@
     }
    ],
    "source": [
-    "gmail.oauth2_login('seongjoo@codebasic.co', access_token)"
+    "gmail.oauth2_login('seongjoo@codebasic.co')"
    ]
   },
   {
@@ -265,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -343,58 +326,6 @@
     "    print(subject['ID'], end=' ')\n",
     "    print(subject['FROM'])\n",
     "    print(subject['Subject'], end='\\n\\n')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "msgs = gmail.get_messages(message_ids)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(416, <email.message.Message at 0x10ccd52b0>),\n",
-       " (1314, <email.message.Message at 0x10ccd57b8>),\n",
-       " (1306, <email.message.Message at 0x10c8720b8>),\n",
-       " (1318, <email.message.Message at 0x10c872c88>),\n",
-       " (424, <email.message.Message at 0x10c8724e0>),\n",
-       " (425, <email.message.Message at 0x10c8729b0>),\n",
-       " (427, <email.message.Message at 0x10cccc0b8>),\n",
-       " (429, <email.message.Message at 0x10cccc940>),\n",
-       " (430, <email.message.Message at 0x10cccc198>),\n",
-       " (765, <email.message.Message at 0x10c84cda0>),\n",
-       " (392, <email.message.Message at 0x10c84cb70>),\n",
-       " (1305, <email.message.Message at 0x10c84ce48>),\n",
-       " (440, <email.message.Message at 0x10c87f208>),\n",
-       " (409, <email.message.Message at 0x10c87f080>),\n",
-       " (410, <email.message.Message at 0x10c87f940>),\n",
-       " (1307, <email.message.Message at 0x10ccdf898>),\n",
-       " (1308, <email.message.Message at 0x10ccdf438>),\n",
-       " (413, <email.message.Message at 0x10ccdfa90>),\n",
-       " (1310, <email.message.Message at 0x10cce82e8>),\n",
-       " (1320, <email.message.Message at 0x10cce85c0>)]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "msgs"
    ]
   },
   {
