패키지 구조 변경 반영

--- a/office/email.ipynb
+++ b/office/email.ipynb
@@ -8,17 +8,7 @@
    },
    "outputs": [],
    "source": [
-    "import sys, os"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "import sys, os\n",
     "sys.path.append(os.path.abspath('../packages/'))\n",
     "\n",
     "from bigpy.mail import EmailClient, EmailConfig"
@@ -70,72 +60,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "IMAPClient (1.0.1)  - Easy-to-use, Pythonic and complete IMAP client library\r\n",
-      "\u001b[33mYou are using pip version 8.1.1, however version 8.1.2 is available.\r\n",
-      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip search imapclient"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting imapclient\n",
-      "  Downloading IMAPClient-1.0.1-py2.py3-none-any.whl (68kB)\n",
-      "\u001b[K    100% |████████████████████████████████| 71kB 415kB/s \n",
-      "\u001b[?25hCollecting mock==1.3.0 (from imapclient)\n",
-      "  Downloading mock-1.3.0-py2.py3-none-any.whl (56kB)\n",
-      "\u001b[K    100% |████████████████████████████████| 61kB 7.6MB/s \n",
-      "\u001b[?25hRequirement already satisfied (use --upgrade to upgrade): six in /Users/seongjoo/anaconda/lib/python3.5/site-packages (from imapclient)\n",
-      "Collecting backports.ssl>=0.0.9 (from imapclient)\n",
-      "  Downloading backports.ssl-0.0.9.tar.gz\n",
-      "Requirement already satisfied (use --upgrade to upgrade): pyopenssl>=0.15.1 in /Users/seongjoo/anaconda/lib/python3.5/site-packages (from imapclient)\n",
-      "Collecting pbr>=0.11 (from mock==1.3.0->imapclient)\n",
-      "  Downloading pbr-1.10.0-py2.py3-none-any.whl (96kB)\n",
-      "\u001b[K    100% |████████████████████████████████| 102kB 1.1MB/s \n",
-      "\u001b[?25hRequirement already satisfied (use --upgrade to upgrade): cryptography>=0.7 in /Users/seongjoo/anaconda/lib/python3.5/site-packages (from pyopenssl>=0.15.1->imapclient)\n",
-      "Requirement already satisfied (use --upgrade to upgrade): idna>=2.0 in /Users/seongjoo/anaconda/lib/python3.5/site-packages (from cryptography>=0.7->pyopenssl>=0.15.1->imapclient)\n",
-      "Requirement already satisfied (use --upgrade to upgrade): pyasn1>=0.1.8 in /Users/seongjoo/anaconda/lib/python3.5/site-packages (from cryptography>=0.7->pyopenssl>=0.15.1->imapclient)\n",
-      "Requirement already satisfied (use --upgrade to upgrade): setuptools>=11.3 in /Users/seongjoo/anaconda/lib/python3.5/site-packages/setuptools-20.3-py3.5.egg (from cryptography>=0.7->pyopenssl>=0.15.1->imapclient)\n",
-      "Requirement already satisfied (use --upgrade to upgrade): cffi>=1.4.1 in /Users/seongjoo/anaconda/lib/python3.5/site-packages (from cryptography>=0.7->pyopenssl>=0.15.1->imapclient)\n",
-      "Requirement already satisfied (use --upgrade to upgrade): pycparser in /Users/seongjoo/anaconda/lib/python3.5/site-packages (from cffi>=1.4.1->cryptography>=0.7->pyopenssl>=0.15.1->imapclient)\n",
-      "Building wheels for collected packages: backports.ssl\n",
-      "  Running setup.py bdist_wheel for backports.ssl ... \u001b[?25l-\b \b\\\b \bdone\n",
-      "\u001b[?25h  Stored in directory: /Users/seongjoo/Library/Caches/pip/wheels/cd/9d/13/e855020d39af904231165e7c92360527ef8d8c7595532b99e1\n",
-      "Successfully built backports.ssl\n",
-      "Installing collected packages: pbr, mock, backports.ssl, imapclient\n",
-      "Successfully installed backports.ssl-0.0.9 imapclient-1.0.1 mock-1.3.0 pbr-1.10.0\n",
-      "\u001b[33mYou are using pip version 8.1.1, however version 8.1.2 is available.\n",
-      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install imapclient"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -144,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -171,75 +95,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[b'seongjoo@codebasic.co authenticated (Success)']"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "gmail.oauth2_login('seongjoo@codebasic.co')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "메일 상자 선택"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{b'EXISTS': 1000,\n",
-       " b'FLAGS': (b'\\\\Answered',\n",
-       "  b'\\\\Flagged',\n",
-       "  b'\\\\Draft',\n",
-       "  b'\\\\Deleted',\n",
-       "  b'\\\\Seen',\n",
-       "  b'$Forwarded',\n",
-       "  b'$MailFlagBit0',\n",
-       "  b'$MailFlagBit1',\n",
-       "  b'$NotJunk',\n",
-       "  b'$NotPhishing',\n",
-       "  b'$Phishing',\n",
-       "  b'NotJunk'),\n",
-       " b'HIGHESTMODSEQ': 220087,\n",
-       " b'PERMANENTFLAGS': (),\n",
-       " b'READ-ONLY': [b''],\n",
-       " b'RECENT': 0,\n",
-       " b'UIDNEXT': 1321,\n",
-       " b'UIDVALIDITY': 1}"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "gmail.select_folder('INBOX', readonly=True)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -248,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -337,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -348,7 +203,7 @@
        "b'LOGOUT Requested'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
