--- a/web/webscrap.ipynb
+++ b/web/webscrap.ipynb
@@ -19,7 +19,10 @@
    },
    "outputs": [],
    "source": [
-    "import webscrap"
+    "import sys, os\n",
+    "sys.path.append(os.path.abspath('../packages/'))\n",
+    "\n",
+    "from bigpy import webscrap"
    ]
   },
   {
