--- a/office/word.ipynb
+++ b/office/word.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Office Word\n",
-    "\n",
-    "$ pip install python-docx"
+    "# Office Word"
    ]
   },
   {
@@ -297,7 +295,352 @@
     }
    ],
    "source": [
-    "doc.extract_table()"
+    "표 = doc.extract_tables()\n",
+    "표"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "여러 개의 표"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "doc_엔씨 = office.Word('../data/엔씨소프트.docx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "표목록 = doc_엔씨.extract_tables()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>제목</td>\n",
+       "      <td>장르</td>\n",
+       "      <td>플랫폼</td>\n",
+       "      <td>서비스지역</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>리니지</td>\n",
+       "      <td>MMORPG</td>\n",
+       "      <td>PC</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>리니지2</td>\n",
+       "      <td>MMORPG</td>\n",
+       "      <td>PC</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>아이온: 영원의 탑</td>\n",
+       "      <td>MMORPG</td>\n",
+       "      <td>PC</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>블레이드 앤 소울</td>\n",
+       "      <td>MMORPG</td>\n",
+       "      <td>PC</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>길드워</td>\n",
+       "      <td>MMORPG</td>\n",
+       "      <td>PC</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>길드워2</td>\n",
+       "      <td>MMORPG</td>\n",
+       "      <td>PC</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>와일드 스타</td>\n",
+       "      <td>MMORPG</td>\n",
+       "      <td>PC</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>MXM</td>\n",
+       "      <td>슈팅 액션</td>\n",
+       "      <td>PC</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>작룡문</td>\n",
+       "      <td>보드게임</td>\n",
+       "      <td>PC</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>시티 오브 히어로</td>\n",
+       "      <td>MMORPG</td>\n",
+       "      <td>PC</td>\n",
+       "      <td>서비스 종료</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>마법학교 아르피아</td>\n",
+       "      <td>MMORPG</td>\n",
+       "      <td>PC</td>\n",
+       "      <td>서비스 종료</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>비쥬마츄</td>\n",
+       "      <td>퍼즐게임</td>\n",
+       "      <td>PC</td>\n",
+       "      <td>서비스 종료</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>명인장기</td>\n",
+       "      <td>보드게임</td>\n",
+       "      <td>PC</td>\n",
+       "      <td>서비스 종료</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>클래식맞고</td>\n",
+       "      <td>보드게임</td>\n",
+       "      <td>PC</td>\n",
+       "      <td>서비스 종료</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>선언맞고</td>\n",
+       "      <td>보드게임</td>\n",
+       "      <td>PC</td>\n",
+       "      <td>서비스 종료</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>골든포커</td>\n",
+       "      <td>보드게임</td>\n",
+       "      <td>PC</td>\n",
+       "      <td>서비스 종료</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>미션아르피아</td>\n",
+       "      <td>??</td>\n",
+       "      <td>PC</td>\n",
+       "      <td>서비스 종료</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             0       1    2       3\n",
+       "0           제목      장르  플랫폼   서비스지역\n",
+       "1          리니지  MMORPG   PC        \n",
+       "2         리니지2  MMORPG   PC        \n",
+       "3   아이온: 영원의 탑  MMORPG   PC        \n",
+       "4    블레이드 앤 소울  MMORPG   PC        \n",
+       "5          길드워  MMORPG   PC        \n",
+       "6         길드워2  MMORPG   PC        \n",
+       "7       와일드 스타  MMORPG   PC        \n",
+       "8          MXM   슈팅 액션   PC        \n",
+       "9          작룡문    보드게임   PC        \n",
+       "10   시티 오브 히어로  MMORPG   PC  서비스 종료\n",
+       "11   마법학교 아르피아  MMORPG   PC  서비스 종료\n",
+       "12        비쥬마츄    퍼즐게임   PC  서비스 종료\n",
+       "13        명인장기    보드게임   PC  서비스 종료\n",
+       "14       클래식맞고    보드게임   PC  서비스 종료\n",
+       "15        선언맞고    보드게임   PC  서비스 종료\n",
+       "16        골든포커    보드게임   PC  서비스 종료\n",
+       "17      미션아르피아      ??   PC  서비스 종료"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "표목록[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>제목</td>\n",
+       "      <td>장르</td>\n",
+       "      <td>플랫폼</td>\n",
+       "      <td>출시예정일</td>\n",
+       "      <td>비고</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>리니지 이터널</td>\n",
+       "      <td>MMORPG</td>\n",
+       "      <td>PC</td>\n",
+       "      <td>미정</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>MXM</td>\n",
+       "      <td>MOBA</td>\n",
+       "      <td>PC</td>\n",
+       "      <td>TBA 2016</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AION Legions</td>\n",
+       "      <td>RPG</td>\n",
+       "      <td>Mobile</td>\n",
+       "      <td>TBA 2016</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Lineage on Mobile</td>\n",
+       "      <td>RPG</td>\n",
+       "      <td>Mobile</td>\n",
+       "      <td>TBA 2016</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Blade &amp; Soul Mobile</td>\n",
+       "      <td>TCG</td>\n",
+       "      <td>Mobile</td>\n",
+       "      <td>2016년 3월 7일 중국 론칭</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Lineage Red Knights</td>\n",
+       "      <td>TCG</td>\n",
+       "      <td>Mobile</td>\n",
+       "      <td>TBA 2016</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     0       1       2                  3   4\n",
+       "0                   제목      장르     플랫폼              출시예정일  비고\n",
+       "1              리니지 이터널  MMORPG      PC                 미정   　\n",
+       "2                  MXM    MOBA      PC           TBA 2016   　\n",
+       "3         AION Legions     RPG  Mobile           TBA 2016   　\n",
+       "4    Lineage on Mobile     RPG  Mobile           TBA 2016   　\n",
+       "5  Blade & Soul Mobile     TCG  Mobile  2016년 3월 7일 중국 론칭   　\n",
+       "6  Lineage Red Knights     TCG  Mobile           TBA 2016   　"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "표목록[1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "문서 내 표를 각"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'엔씨.xlsx'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "doc_엔씨.tables_to_excel('엔씨.xlsx')"
    ]
   },
   {
