네이버 검색 자동 수행 예시 추가

--- a/web/autoform.ipynb
+++ b/web/autoform.ipynb
@@ -73,14 +73,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "뿅!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "time.sleep(3)\n",
+    "print('뿅!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "chrome = webscrap.get_browser()\n",
+    "chrome.get('http://google.com')\n",
+    "time.sleep(5)\n",
+    "\n",
+    "검색상자 = chrome.find_element_by_name('q')\n",
+    "검색상자.send_keys('파이썬')\n",
+    "검색상자.submit()\n",
+    "\n",
+    "time.sleep(5) # Let the user actually see something!\n",
+    "\n",
+    "chrome.quit()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "import time\n",
-    "\n",
     "chrome = webscrap.get_browser()\n",
     "\n",
     "# 네이버 홈페이지 로그인 양식 작성\n",
@@ -97,21 +137,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "chrome = webscrap.get_browser()\n",
-    "chrome.get('http://google.com')\n",
-    "time.sleep(5)\n",
     "\n",
-    "검색상자 = chrome.find_element_by_name('q')\n",
+    "chrome.get('http://www.naver.com')\n",
+    "time.sleep(3)\n",
+    "\n",
+    "검색상자 =  chrome.find_element_by_css_selector('#query')\n",
     "검색상자.send_keys('파이썬')\n",
-    "검색상자.submit()\n",
+    "time.sleep(3)\n",
     "\n",
-    "time.sleep(5) # Let the user actually see something!\n",
+    "검색상자.submit()\n",
+    "time.sleep(5)\n",
     "\n",
     "chrome.quit()"
    ]
