자동 구글 검색 예시 추가

--- a/web/webscrap.ipynb
+++ b/web/webscrap.ipynb
@@ -111,7 +111,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [
     {
@@ -175,7 +175,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [
     {
@@ -336,6 +336,61 @@
    },
    "source": [
     "## CSS 선택자 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 자동 구글 검색\n",
+    "\n",
+    "검색을 수행해 상위 5개 결과의 링크를 웹브라우저에서 열기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# %load search_google.py\n",
+    "import sys, webbrowser\n",
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "def 구글검색(키워드, 탭수=5):\n",
+    "    URL양식 = 'http://google.com/search?q={0}'\n",
+    "    응답 = requests.get(URL양식.format(키워드))\n",
+    "    if not 응답.status_code == 200:\n",
+    "        print('HTTP 응답 코드: {}'.format(응답.status_code))\n",
+    "    else:\n",
+    "        스프 = BeautifulSoup(응답.text, 'lxml')\n",
+    "\n",
+    "    결과링크 = 스프.select('.r a')\n",
+    "    for 링크 in 결과링크[:탭수]:\n",
+    "        webbrowser.open('http://google.com' + 링크.get('href'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "구글검색('칼퇴근 맛집')"
    ]
   },
   {
