--- a/web/webscrap.ipynb
+++ b/web/webscrap.ipynb
@@ -400,7 +400,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "webscrap.search('칼퇴근 맛집')"
+   ]
   }
  ],
  "metadata": {
