bigpy to bigpython

--- a/web/autoform.ipynb
+++ b/web/autoform.ipynb
@@ -8,20 +8,7 @@
    },
    "outputs": [],
    "source": [
-    "import sys, os\n",
-    "\n",
-    "sys.path.append(os.path.abspath('../packages/'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from bigpy import webscrap"
+    "from bigpython import webscrap"
    ]
   },
   {
@@ -35,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -44,7 +31,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied (use --upgrade to upgrade): selenium in /Users/seongjoo/anaconda/lib/python3.5/site-packages\n"
+      "Collecting selenium\n",
+      "  Downloading selenium-2.53.5-py2.py3-none-any.whl (884kB)\n",
+      "Installing collected packages: selenium\n",
+      "Successfully installed selenium-2.53.5\n"
      ]
     },
     {
@@ -73,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -94,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -115,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -137,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
